# parsini

./: CMakeLists.txt
.github/workflows/: cmake.yml
include/: inidoc.hpp  utils.hpp
src/: inidoc.cpp
test/: CMakeLists.txt  test.cpp
